# ChangeLog for www-plugins/adobe-flash
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.20 2010/04/30 12:29:05 lack Exp $

  30 Apr 2010; Jim Ramsay <lack@gentoo.org> adobe-flash-9.0.262.0.ebuild,
  adobe-flash-10.0.45.2.ebuild, adobe-flash-10.0.45.2-r1.ebuild:
  freefont-ttf should have been liberation-fonts instead, bug #302176

*adobe-flash-10.0.45.2-r1 (27 Mar 2010)

  27 Mar 2010; Jim Ramsay <lack@gentoo.org>
  +adobe-flash-10.0.45.2-r1.ebuild:
  Revbump to address bug #286159 (Ensure *all* processors support the
  lahf_lm instruction) and bug #311575 (No more flash-libcompat needed
  thanks to >=app-emulation/emul-linux-x86-baselibs-20100220)

  04 Mar 2010; Jim Ramsay <lack@gentoo.org> -adobe-flash-10.0.42.34.ebuild:
  Version cleanup (Secury bug #307749)

  04 Mar 2010; Pacho Ramos <pacho@gentoo.org> adobe-flash-10.0.45.2.ebuild:
  stable amd64, security bug 307749

  04 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  adobe-flash-10.0.45.2.ebuild:
  stable x86, security bug 307749

*adobe-flash-10.0.45.2 (12 Feb 2010)
*adobe-flash-9.0.262.0 (12 Feb 2010)

  12 Feb 2010; Jim Ramsay <lack@gentoo.org> -adobe-flash-9.0.260.0.ebuild,
  +adobe-flash-9.0.262.0.ebuild, +adobe-flash-10.0.45.2.ebuild:
  Version bump: 10.0.45.2 is released (security/stability fix)

  28 Dec 2009; Jim Ramsay <lack@gentoo.org> -adobe-flash-10.0.32.18.ebuild:
  Version Cleanup: 10.0.32.18 has security holes, bug 296407

  28 Dec 2009; Jim Ramsay <lack@gentoo.org> adobe-flash-10.0.42.34.ebuild:
  Block www-plugins/libflashsupport which is only required for adobe-flash-9

  27 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  adobe-flash-10.0.42.34.ebuild:
  stable x86, security bug 296407

  18 Dec 2009; Pacho Ramos <pacho@gentoo.org> adobe-flash-10.0.42.34.ebuild:
  amd64 stable, bug 296407

*adobe-flash-10.0.42.34 (09 Dec 2009)
*adobe-flash-9.0.260.0 (09 Dec 2009)
